<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/singleMessageContainer"
    android:orientation="vertical"
    android:layout_margin="10dp">

        <TextView
            android:id="@+id/datte"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/datedate" />

        <TextView
            android:id="@+id/Author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/green"
            android:gravity="start"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sender_name" />

        <TextView
            android:id="@+id/Amessage"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/message"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />


</LinearLayout>