<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <AutoCompleteTextView
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/enter_username"
            android:textColor="@color/green"
            android:textColorHint="@color/White"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_password"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:textColorHint="@color/White"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textStyle="bold"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/register_confirm_password"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:textColorHint="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agin_password"
            android:imeActionLabel="@string/sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:background="@color/White"
        android:textColor="@color/green"
        android:onClick="signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textStyle="bold"/>



</LinearLayout>